# EBM_Framework

./: .gitignore  AGENTS.md  CLAUDE.md  INTEGRATION.md  README.md  SKILL.md  pack_framework.py  pyproject.toml  review-prompt.md  verify_memory_claims.py
.agents/: handoff.md
.claude/: settings.json
.github/workflows/: tests.yml
EBM_Analysis/: .gitattributes  .gitignore  ANALYSIS_SPEC.md  README.md  _build_pdf.py  manifest.yaml  requirements.txt
EBM_Analysis/calibration/: emara2025_reference.md
EBM_Analysis/guardrails/: _v65_supplements.md  adversarial_review.md  amstar2.md  coi.md  computation_check.md  data_honesty.md  effect_measure.md  extraction_conventions.md  fulltext_authoritative.md  grade_assessment.md  grading_rules.md  harms.md  heterogeneity.md  integrity_check.md  model_choice.md  multitrack_integration.md  nma.md  no_effect_interpretation.md  nonreporting.md  outcome_nature.md  output_selfcheck.md  overlap_indirect.md  prisma_reporting.md  protocol_completeness.md  rare_events.md  registry_backfill.md  report_completeness.md  rob2.md  robins_i.md  selective_reporting.md  sof_table.md  (+5 more)
EBM_Search/: .gitignore  README.md  SEARCH_SPEC.md  SKILL.md
config/: settings.example.yaml
tests/: conftest.py  test_absrisk.py  test_corpus_completeness.py  test_g7_contract_and_gates.py  test_gate_guard_failclosed.py  test_grade_certainty_arith.py  test_have_verified.py  test_new_gates.py  test_prisma_audit.py  test_quote_numeric_guard.py  test_render_smoketest.py  test_report_data_validate.py  test_scan5_regressions.py  test_session_regressions.py  test_unpaywall.py
(+80 files in other folders)
