[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebm-framework"
version = "0.20.2"
description = "EBM 實證醫學端到端框架：檢索(去幻覺) → GRADE 評讀。內建 schema/算術/逐字 quote/渲染煙霧/跨報告多道 gate。"
requires-python = ">=3.10"
# 執行期相依刻意極輕（標準庫為主）；reportlab/pypdf/jsonschema/pyyaml 為選用。
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pypdf>=4", "jsonschema>=4", "reportlab>=4", "pyyaml>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
  "network: 需要外網（Unpaywall/PMC 等）；CI 或離線可用 -m 'not network' 跳過",
]
