[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebm-framework"
version = "0.20.2"
description = "EBM 實證醫學端到端框架：檢索(去幻覺) → GRADE 評讀。內建 schema/算術/逐字 quote/渲染煙霧/跨報告多道 gate。"
requires-python = ">=3.10"
# 執行期相依刻意極輕（標準庫為主）；reportlab/pypdf/jsonschema/pyyaml 為選用。
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pypdf>=4", "jsonschema>=4", "reportlab>=4", "pyyaml>=6"]

# 本 repo 是「腳本集合」非可 import 套件：腳本一律按路徑執行（python EBM_Search/scripts/xxx.py）。
# 不宣告此區，setuptools 會把 config/EBM_Search/EBM_Analysis 當多個頂層套件而報錯，
# 使 `pip install -e .` 失敗。py-modules=[] 表明無套件可打包，僅裝 metadata＋依賴。
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
  "network: 需要外網（Unpaywall/PMC 等）；CI 或離線可用 -m 'not network' 跳過",
]
